# controllers/transactionController.go
@@ -7,6 +7,7 @@ import (
 
 	"BE-ecommerce-web-template/models"
 	"BE-ecommerce-web-template/services"
+	"BE-ecommerce-web-template/utils/token"
 
 	"github.com/gin-gonic/gin"
 )
@@ -17,6 +18,43 @@ type TransactionController struct {
 
 func NewTransactionController(service services.TransactionService) *TransactionController {
 	return &TransactionController{service: service}
+}
+
+// GetMyTransactions godoc
+// @Summary Get all transactions by current authenticated user.
+// @Description Retrieve a list of transactions associated with the authenticated user.
+// @Tags Transaction
+// @Produce json
+// @Success 200 {object} models.SuccessResponse{data=[]models.Transaction} "Success fetch my transactions"
+// @Failure 400 {object} models.ErrorResponse "Invalid input"
+// @Failure 401 {object} models.ErrorResponse "Unauthorized"
+// @Failure 500 {object} models.ErrorResponse "Internal server error"
+// @Security BearerAuth
+// @Router /my-transactions [get]
+func (c *TransactionController) GetMyTransactions(ctx *gin.Context) {
+	userID, err := token.ExtractTokenID(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusUnauthorized, models.ErrorResponse{
+			Status:  "error",
+			Message: "User not authenticated or invalid token",
+		})
+		return
+	}
+
+	transactions, err := c.service.GetMyTransactions(int(userID))
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.ErrorResponse{
+			Status:  "error",
+			Message: "Failed to retrieve transactions",
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, models.SuccessResponse{
+		Status:  "success",
+		Message: "Success fetch my transactions",
+		Data:    transactions,
+	})
 }
 
 // GetTransactionByID godoc
