# docs/swagger.json
@@ -472,6 +472,67 @@
                 }
             }
         },
+        "/mytransactions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "retrieve all transactions associated with the authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Get my transactions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.Transaction"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/product": {
             "get": {
                 "description": "Retrieve a list of all products with optional filtering by price and pagination",
@@ -753,6 +814,11 @@
         },
         "/profiles": {
             "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
                 "description": "Creating a new Profile.",
                 "consumes": [
                     "application/json"
@@ -765,6 +831,13 @@
                 ],
                 "summary": "Create New Profile.",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Profile input",
                         "name": "profileInput",
@@ -865,6 +938,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
                 "description": "Updating an existing Profile by ID.",
                 "consumes": [
                     "application/json"
@@ -877,6 +955,13 @@
                 ],
                 "summary": "Update Existing Profile.",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Profile ID",
@@ -1720,7 +1805,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "$ref": "#/definitions/models.TransactionDTO"
                         }
                     }
                 ],
@@ -2215,6 +2300,17 @@
         }
     },
     "definitions": {
+        "models.Category": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CategoryRequest": {
             "type": "object",
             "required": [
@@ -2245,6 +2341,35 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Product": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "$ref": "#/definitions/models.Category"
+                },
+                "categoryID": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "imageURL": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
@@ -2420,20 +2545,23 @@
         "models.Transaction": {
             "type": "object",
             "properties": {
-                "created_AT": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
                 "pay_DATE": {
                     "type": "string"
                 },
+                "pay_TYPE": {
+                    "type": "string"
+                },
+                "product": {
+                    "$ref": "#/definitions/models.Product"
+                },
                 "product_ID": {
                     "type": "integer"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "total": {
                     "type": "integer"
@@ -2441,7 +2569,33 @@
                 "trx_ID": {
                     "type": "string"
                 },
-                "updated_AT": {
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "user_ID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.TransactionDTO": {
+            "type": "object",
+            "properties": {
+                "pay_DATE": {
+                    "type": "string"
+                },
+                "pay_TYPE": {
+                    "type": "string"
+                },
+                "product_ID": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "trx_ID": {
                     "type": "string"
                 },
                 "user_ID": {
@@ -2545,9 +2699,6 @@
                 },
                 "phone": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
